--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarGendersPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarGendersPanel.cshtml
@@ -40,7 +40,7 @@
             <a asp-action="IndexCards1" asp-area="" asp-controller="Genders"
                class="dropdown-item @(currentAction == "IndexCards1" && currentController == "Genders" ? "active" : "")">
                 <span class="fas fa-person-through-window"></span>
-                Genders Cards
+                Genders Cards 1
             </a>
         </li>
     </ul>
