--- a/SchoolProject.Web/Views/Shared/_Layout.cshtml
+++ b/SchoolProject.Web/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
 </head>
 
 <div class="b-example-divider d-none">Layout Body</div>
-<body class="min-vh-100">
+<body class="min-vh-100" data-controller-name="@controllerName">
 
 <div class="b-example-divider d-none">Layout Header</div>
 <partial name="_LayoutHeader"/>
