--- a/SchoolProject.Web/Views/Users/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/Users/IndexCards.cshtml
@@ -19,7 +19,7 @@
 
 
 <div class="album py-5 bg-body-tertiary">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-5 g-3">
             @foreach (var item in Model)
             {
