--- a/SchoolProject.Web/Views/Cities/Index.cshtml
+++ b/SchoolProject.Web/Views/Cities/Index.cshtml
@@ -15,8 +15,9 @@
 <table class="table table-hover" sortable="True" id="sortableTable">
     <thead>
     <tr>
+        <th>@Html.DisplayNameFor(model => model.ProfilePhotoId)</th>
         <th>@Html.DisplayNameFor(model => model.Name)</th>
-        <th>@Html.DisplayNameFor(model => model.IdGuid)</th>
+        @* <th>@Html.DisplayNameFor(model => model.IdGuid)</th> *@
         <th>@Html.DisplayNameFor(model => model.WasDeleted)</th>
         <th>@Html.DisplayNameFor(model => model.CreatedAt)</th>
         <th>@Html.DisplayNameFor(model => model.UpdatedAt)</th>
@@ -28,8 +29,13 @@
     @foreach (var item in Model)
     {
         <tr>
+            @* <td>@Html.DisplayFor(modelItem => item.ProfilePhotoId)</td> *@
+            <td>
+                <img alt="Image" class="img-thumbnail" height="150"
+                     src="@Url.Content(item.ProfilePhotoIdUrl)" width="auto"/>
+            </td>
             <td>@Html.DisplayFor(modelItem => item.Name)</td>
-            <td>@Html.DisplayFor(modelItem => item.IdGuid)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.IdGuid)</td> *@
             <td>@Html.DisplayFor(modelItem => item.WasDeleted)</td>
             <td>@Html.DisplayFor(modelItem => item.CreatedAt)</td>
             <td>@Html.DisplayFor(modelItem => item.UpdatedAt)</td>
