--- a/SchoolProject.Web/Views/Cities/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/Cities/IndexCards.cshtml
@@ -9,12 +9,25 @@
     var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
 }
 
-<h1>@pageTitle</h1>
+@* <h2>@pageTitle</h2> *@
+<h2>@ViewData["Title"]</h2>
 
-<p>
-    @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
-    <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-solid fa-circle-plus fa-xl p-1 pe-1"></span> Create New </a>
-</p>
+<div class="container-fluid py-3">
+    <div class="row">
+        @* <div class="col-md-4"> *@
+        <div class="col">
+            @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
+            <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-solid fa-circle-plus fa-xl p-1 pe-1"></span> Create New </a>
+        </div>
+        @if (ReferenceEquals(actionName, "IndexCards1"))
+        {
+            @* <div class="col-md-8 justify-content-end"> *@
+            <div class="col justify-content-end">
+                <partial model="Model" name="Pagination/_PageNavigationTop"/>
+            </div>
+        }
+    </div>
+</div>
 
 
 <div class="album py-5 bg-body-tertiary">
