--- a/SchoolProject.Web/Views/Cities/IndexCards1.cshtml
+++ b/SchoolProject.Web/Views/Cities/IndexCards1.cshtml
@@ -1,8 +1,69 @@
-﻿@model PaginationViewModel<SchoolProject.Web.Data.Entities.Countries.City>
+﻿@using System.Reflection
+
+@model PaginationViewModel<SchoolProject.Web.Data.Entities.Countries.City>
 
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    var actionName = ViewContext.RouteData.Values["action"]?.ToString();
+    var controllerName = ViewContext.RouteData.Values["controller"]?.ToString();
+    var assemblyName = Assembly.GetExecutingAssembly().GetName().Name;
+
+    var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
 }
 
-<h2>title</h2>
+@* <h2>@pageTitle</h2> *@
+<h2>@ViewData["Title"]</h2>
+
+<div class="container-fluid py-3">
+    <div class="row">
+        @* <div class="col-md-4"> *@
+        <div class="col">
+            @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
+            <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-solid fa-circle-plus fa-xl p-1 pe-1"></span> Create New </a>
+        </div>
+        @if (ReferenceEquals(actionName, "IndexCards1"))
+        {
+            @* <div class="col-md-8 justify-content-end"> *@
+            <div class="col justify-content-end">
+                <partial model="Model" name="Pagination/_PageNavigationTop"/>
+            </div>
+        }
+    </div>
+</div>
+
+
+<div class="album py-5 bg-body-tertiary">
+    <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-5 g-3">
+            @foreach (var item in Model.RecordsQuery)
+            {
+                <div class="col">
+                    @* <div class="card shadow-sm"> *@
+                    <div class="card shadow-sm">
+                        <div class="card-img-top">
+                            <img src="@item.ProfilePhotoIdUrl" alt="Profile Photo" class="img-fluid">
+                        </div>
+
+                        <div class="card-body">
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.Name)</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"> <span class="fa-regular fa-pen-to-square"></span> Edit </a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"> <span class="fa-regular fa-file"></span> Details </a>
+                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a>
+                                </div>
+                                <small class="text-body-secondary">
+                                    @Html.DisplayNameFor(modelItem => item.Country.Name)<br/>
+                                    @Html.DisplayFor(modelItem => item.Country.Name)
+                                </small>
+                                <small class="text-body-secondary">
+                                    @Html.DisplayNameFor(modelItem => item.NumberCitiesInCountry)<br/>
+                                    @Html.DisplayFor(modelItem => item.NumberCitiesInCountry)
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
