--- a/SchoolProject.Web/Views/Cities/_IndexCards.cshtml
+++ b/SchoolProject.Web/Views/Cities/_IndexCards.cshtml
@@ -1,21 +1,26 @@
-﻿@using System.Reflection
-@model IEnumerable<SchoolProject.Web.Data.Entities.Countries.Nationality>
-
-@{
-    var actionName = ViewContext.RouteData.Values["action"]?.ToString();
-    var controllerName = ViewContext.RouteData.Values["controller"]?.ToString();
-    var assemblyName = Assembly.GetExecutingAssembly().GetName().Name;
-
-    var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
-}
-
-@* <h2>@pageTitle</h2> *@
-<h2>@ViewData["Title"]</h2>
+﻿@model IEnumerable<SchoolProject.Web.Data.Entities.Countries.City>
 
 <p>
     @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
     <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-solid fa-circle-plus fa-xl p-1 pe-1"></span> Create New </a>
 </p>
+
+<div class="container-fluid py-3">
+    <div class="row">
+        @* <div class="col-md-4"> *@
+        <div class="col">
+            @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
+            <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-solid fa-circle-plus fa-xl p-1 pe-1"></span> Create New </a>
+        </div>
+        @if (ReferenceEquals(ViewData["actionName"], "IndexCards1"))
+        {
+            @* <div class="col-md-8 justify-content-end"> *@
+            <div class="col justify-content-end">
+                <partial model="Model" name="Pagination/_PageNavigationTop"/>
+            </div>
+        }
+    </div>
+</div>
 
 
 <div class="album py-5 bg-body-tertiary">
@@ -27,8 +32,7 @@
                     @* <div class="card shadow-sm"> *@
                     <div class="card shadow-sm">
                         <div class="card-img-top">
-                            @* <img alt="Profile Photo" class="img-fluid" src="~/images/icons/school-256x256.ico"> *@
-                            <img src="@item.Country.ProfilePhotoIdUrl" alt="Profile Photo" class="img-fluid">
+                            <img src="@item.ProfilePhotoIdUrl" alt="Profile Photo" class="img-fluid">
                         </div>
 
                         <div class="card-body">
