--- a/SchoolProject.Web/Views/SchoolClassCourses/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/SchoolClassCourses/IndexCards.cshtml
@@ -9,7 +9,10 @@
     var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
 }
 
-<h1>@pageTitle</h1>
+
+@* <h2>@pageTitle</h2> *@
+<h2>@ViewData["Title"]</h2>
+
 
 <p>
     @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
