--- a/SchoolProject.Web/Views/Teachers/IndexCards1.cshtml
+++ b/SchoolProject.Web/Views/Teachers/IndexCards1.cshtml
@@ -10,7 +10,8 @@
 
 }
 
-<h2>@pageTitle</h2>
+@* <h2>@pageTitle</h2> *@
+<h2>@ViewData["Title"]</h2>
 
 <div class="container-fluid py-3">
     <div class="row">
