--- a/SchoolProject.Web/Views/Users/Index.cshtml
+++ b/SchoolProject.Web/Views/Users/Index.cshtml
@@ -17,11 +17,11 @@
 <table class="table table-hover" sortable="True" id="sortableTable">
     <thead>
     <tr>
+        <th>@Html.DisplayNameFor(model => model.User.ProfilePhotoId)</th>
         <th>@Html.DisplayNameFor(model => model.User.FirstName)</th>
         <th>@Html.DisplayNameFor(model => model.User.LastName)</th>
         <th>@Html.DisplayNameFor(model => model.User.Address)</th>
         <th>@Html.DisplayNameFor(model => model.User.WasDeleted)</th>
-        <th>@Html.DisplayNameFor(model => model.User.ProfilePhotoId)</th>
         <th>@Html.DisplayNameFor(model => model.User.UserName)</th>
         @* <th>@Html.DisplayNameFor(model => model.User.NormalizedUserName)</th> *@
         <th>@Html.DisplayNameFor(model => model.User.Email) </th>
@@ -36,7 +36,9 @@
         <th>@Html.DisplayNameFor(model => model.User.LockoutEnd)</th>
         <th>@Html.DisplayNameFor(model => model.User.LockoutEnabled)</th>
         <th>@Html.DisplayNameFor(model => model.User.AccessFailedCount)</th>
-        <th>@Html.DisplayNameFor(model => model.Role.RoleId)</th>
+        @* <th>@Html.DisplayNameFor(model => model.Role.RoleId)</th> *@
+        <th>@Html.DisplayNameFor(model => model.Role)</th>
+        <th>@Html.DisplayNameFor(model => model.RoleName)</th>
         <th>@Html.DisplayNameFor(model => model.Roles)</th>
         <th></th>
     </tr>
@@ -46,11 +48,16 @@
     @foreach (var item in Model)
     {
         <tr>
+            @* <td>@Html.DisplayFor(modelItem => item.ProfilePhotoId)</td> *@
+            <td>
+                <img alt="Image" class="img-thumbnail" height="150"
+                     src="@Url.Content(item.User.ProfilePhotoIdUrl)" width="auto"/>
+            </td>
             <td>@Html.DisplayFor(modelItem => item.User.FirstName)</td>
             <td>@Html.DisplayFor(modelItem => item.User.LastName)</td>
             <td>@Html.DisplayFor(modelItem => item.User.Address)</td>
             <td>@Html.DisplayFor(modelItem => item.User.WasDeleted)</td>
-            <td>@Html.DisplayFor(modelItem => item.User.ProfilePhotoId)</td>
+
             <td>@Html.DisplayFor(modelItem => item.User.UserName)</td>
             @* <td>@Html.DisplayFor(modelItem => item.User.NormalizedUserName)</td> *@
             <td>@Html.DisplayFor(modelItem => item.User.Email)</td>
@@ -65,7 +72,9 @@
             <td>@Html.DisplayFor(modelItem => item.User.LockoutEnd)</td>
             <td>@Html.DisplayFor(modelItem => item.User.LockoutEnabled)</td>
             <td>@Html.DisplayFor(modelItem => item.User.AccessFailedCount)</td>
-            <td>@Html.DisplayFor(modelItem => item.Role.RoleId)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.Role.RoleId)</td> *@
+            <td>@Html.DisplayFor(modelItem => item.Role)</td>
+            <td>@Html.DisplayFor(modelItem => item.RoleName)</td>
             <td>@Html.DisplayFor(modelItem => item.Roles)</td>
 
             <td>
