--- a/SchoolProject.Web/Views/Users/IndexCards1.cshtml
+++ b/SchoolProject.Web/Views/Users/IndexCards1.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Reflection
+
 @model PaginationViewModel<SchoolProject.Web.Models.Users.UserWithRolesViewModel>
 
 @{
@@ -12,21 +13,27 @@
     var pageTitle = actionName + " - " + controllerName + " - " + assemblyName;
 }
 
+@* <h2>@pageTitle</h2> *@
 <h2>@ViewData["Title"]</h2>
 
-<p>
-    @* <a asp-action="Create" class="btn btn-outline-primary"><span class="material-symbols-outlined">add_box</span>Create New</a> *@
-    <a asp-action="Create" class="btn btn-secondary"><span class="material-symbols-outlined">person_add</span>Create New</a>
-</p>
+<div class="container-fluid py-3">
+    <div class="row">
+        @* <div class="col-md-4"> *@
+        <div class="col">
+            @* <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a> *@
+            <a asp-action="Create" class="btn btn-secondary p-2"><span class="fa-solid fa-circle-plus fa-xl p-1 pe-1"></span> Create New </a>
+        </div>
+        @* <div class="col-md-8 justify-content-end"> *@
+        <div class="col justify-content-end">
+            <partial model="Model" name="Pagination/_PageNavigationTop"/>
+        </div>
+    </div>
+</div>
 
-
-<partial name="Pagination/_PageNavigationTop" model="Model"/>
-
-
-<div class="album py-5 bg-body-tertiary">
+<div class="album bg-body-tertiary p-4">
     <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-5 g-3">
-            @foreach (var item in Model.Records)
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-5 g-3">
+            @foreach (var item in Model.RecordsQuery)
             {
                 <div class="col">
                     @* <div class="card shadow-sm"> *@
@@ -52,7 +59,7 @@
                                 @*     @Html.DisplayFor(modelItem => item.User.Address) *@
                                 @* </small> *@
                                 <small class="text-body-secondary px-2">
-                                    @Html.DisplayFor(modelItem => item.User.Email)<br/>
+                                    @Html.DisplayFor(modelItem => item.User.Email)<br/><br/>
                                     @Html.DisplayFor(modelItem => item.User.Address)
                                 </small>
                             </div>
