more code added and remeved and changed, still some erros in 2 view for the moment

--- a/SchoolProject.Web/Views/Cities/IndexCards1.cshtml
+++ b/SchoolProject.Web/Views/Cities/IndexCards1.cshtml
@@ -56,8 +56,8 @@
                                     @Html.DisplayFor(modelItem => item.Country.Name)
                                 </small>
                                 <small class="text-body-secondary">
-                                    @Html.DisplayNameFor(modelItem => item.NumberCitiesInCountry)<br/>
-                                    @Html.DisplayFor(modelItem => item.NumberCitiesInCountry)
+                                    @Html.DisplayNameFor(modelItem => item.NumberOfCitiesInCountry)<br/>
+                                    @Html.DisplayFor(modelItem => item.NumberOfCitiesInCountry)
                                 </small>
                             </div>
                         </div>
