--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
@@ -2,6 +2,7 @@
 @using SchoolProject.Web.Helpers.Users
 @using System.Diagnostics
 @using Microsoft.AspNetCore.Identity
+
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 @* @inject HttpContext HttpContext *@
@@ -22,7 +23,7 @@
     @* @Context.User.Identity.Name *@
     @* @Context.User.Identity.AuthenticationType *@
 
-    var principal = Context.User;
+    // var principal = Context.User;
     @* @foreach (Claim claim in principal.Claims) *@
     @* { *@
     @*     <p>CLAIM TYPE: @claim.Type; CLAIM VALUE: @claim.Value</p> *@
@@ -37,17 +38,20 @@
 
     @* @(User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))) *@
     @* @(User.Identity.IsAuthenticated && User.HasClaim("IsAdmin", "true")) *@
+}
 
-    IList<string> userRoles = null;
+@{
     if (User.Identity.IsAuthenticated)
     {
         var user = await UserManager.GetUserAsync(User);
-        userRoles = await UserManager.GetRolesAsync(user);
         if (user != null)
+        {
+            var userRoles = await UserManager.GetRolesAsync(user);
             foreach (var role in userRoles)
             {
-                @* <li>@role</li> *@
+                <li>@role</li>
             }
+        }
     }
 }
 
@@ -66,7 +70,6 @@
     @* <button type="button" class="btn btn-link">Link</button> *@
 
     <div class="container">
-
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
             <a href="/"
@@ -257,5 +260,4 @@
 
 
     </div>
-
 </div>
